added some changes to the little dude

--- a/application/styles/styles.css
+++ b/application/styles/styles.css
@@ -79,6 +79,13 @@ p{
     background-color: black;
 }
 
+#floor > #derp {
+    margin-top: -20vh;
+    margin-left: 80vw;
+    transform: scaleX(-1);
+    height: 20vh
+}
+
 .section {
     z-index: 5;
     margin-top: 5vh;
@@ -97,4 +104,22 @@ p{
 
 .animate__fadeInLeft {
     visibility: visible;
+}
+
+.ladder {
+    margin-top: -120vh;
+    height: 120vh;
+    margin-left: 85vw;
+    z-index: -5;
+}
+
+#s3-dude {
+    margin-top: -60vh;
+    height: 20vh;
+    z-index: 10;
+}
+
+.s3 > div > p{
+    padding-right: 20vw;
+    background-color: chocolate;
 }
