--- a/application/styles/styles.css
+++ b/application/styles/styles.css
@@ -34,6 +34,8 @@ p{
 
 #sky {
     background-color: white;
+    z-index: 5;
+    position: relative;
 }
 
 #pig-card {
@@ -77,6 +79,7 @@ p{
     height: 5vh;
     width: 100%;
     background-color: black;
+    z-index: 10;
 }
 
 #floor > #derp {
@@ -94,8 +97,91 @@ p{
     right: 0;
 }
 
+.section > .card {
+    z-index: 0;
+}
+
 .section-filler {
     height: 15vh;
+}
+
+.ladder {
+    margin-top: -105vh;
+    height: 100vh;
+    visibility: hidden;
+    margin-left: 85vw;
+    z-index: 100;
+}
+
+#s3-climbing {
+    position: absolute;
+    left: 20;
+    margin-top: -140vh;
+    z-index: 10;
+    height: 20vh
+}
+
+.s3-dude {
+    margin-top: -114vh;
+    margin-left: 40vw;
+    height: 20vh;
+    z-index: 10;
+    visibility: hidden;
+}
+
+#s3-ladder {
+    height: 100vh;
+    overflow-y: visible;
+    margin-top: -190vh;
+    margin-right: 2vw;
+    z-index: 5;
+}
+
+#s2-climbing {
+    position: absolute;
+    left: 20;
+    margin-top: -130vh;
+    margin-left: 50vw;
+    z-index: 10;
+    height: 20vh
+}
+
+#s2-dude {
+    margin-top: -113vh;
+    margin-left: 20vw;
+    height: 20vh;
+    z-index: 10;
+}
+
+#s2-ladder {
+    height: 95vh;
+    overflow-y: visible;
+    margin-top: -180vh;
+    margin-left: 50vw;
+    z-index: 5;
+}
+
+.waving {
+    position: absolute;
+    height: 20vh;
+    bottom: -2.5vh;
+    margin-left: 30vw;
+    z-index: 5;
+    visibility: hidden;
+}
+
+.animate__fadeOut {
+    visibility: hidden;
+}
+
+.end-text {
+    bottom: -25vh;
+    margin: auto;
+    position: relative;
+    text-align: center;
+    visibility: hidden;
+    height: 100%;
+    z-index: 15;
 }
 
 .s1, .s2, .s3{
@@ -104,22 +190,4 @@ p{
 
 .animate__fadeInLeft {
     visibility: visible;
-}
-
-.ladder {
-    margin-top: -120vh;
-    height: 120vh;
-    margin-left: 85vw;
-    z-index: -5;
-}
-
-#s3-dude {
-    margin-top: -60vh;
-    height: 20vh;
-    z-index: 10;
-}
-
-.s3 > div > p{
-    padding-right: 20vw;
-    background-color: chocolate;
 }
